avdevice/decklink_common: add support for DeckLink SDK 11

Fixes ticket #7789.

Signed-off-by: Marton Balint <cus@passwd.hu>